[tool.poetry]
name = "repl_python3_ExpertPrimary"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
discord = "^1.0.1"
flask = "^2.0.0"
tabulate = "^0.8.9"
pyowm = "^3.2.0"
config = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
